# deephack

./: .gitignore  CMakeLists.example.txt  CMakeLists.txt  README.md  continue_training_gopher.sh  continue_training_seaquest.sh  continue_training_tutankham.sh  dqn.cpp  dqn.hpp  dqn_main.cpp  dqn_main_gopher_submit.cpp  dqn_main_seaquest_submit.cpp  dqn_main_tutankham_submit.cpp  dqn_submit.cpp  how_to_run_on_server  play_gopher.sh  play_seaquest.sh  play_tutankham.sh  priorities.txt  set_paths.sh  submit_all.sh  submit_gopher.sh  submit_seaquest.sh  submit_tutankham.sh  train_gopher.sh  train_seaquest.sh  train_tutankham.sh  watch_gopher.sh  watch_seaquest.sh  watch_tutankham.sh
Net/: dqn_gopher_solver.prototxt  dqn_seaquest_solver.prototxt  dqn_tutankham_solver.prototxt
Net/Snapshot-gopher/: gopher_iter_247500.caffemodel
Net/Snapshot-seaquest/: seaquest_iter_20000.caffemodel
Net/Snapshot-tutankham/: tutankham_iter_15000.caffemodel
deepmind-atari-master/: run_cpu_test.sh
deepmind-atari-master/dqn/: NeuralQLearner.lua  our_agent.lua
dqn-in-the-caffe/: CMakeLists.txt  dqn.cpp
dqn-in-the-caffe/Net/: dqn_solver.prototxt
dqn-in-the-caffe/Net/Snapshots/: seaquest_iter_10000.caffemodel  seaquest_iter_5000.caffemodel
